--- a/estilos/style.css
+++ b/estilos/style.css
@@ -13,32 +13,29 @@ body{
 }
 
 
-.cabecalho{
-    padding: 2% 0% 0% 0%;
+/* .cabecalho{
+    padding: 2% 0% 0% 34%;
 
-}
+} */
 
 .cabecalho__menu{
+    margin-top: 20px;
     display: flex;
+    justify-content: center;
     gap: 80px;
 }
 
 .cabecalho__menu__link{
-    text-decoration: none;
-    margin-left: 200px;
+    /* margin-left: 200px; */
     color:#22D4FD;
     font-family: 'Montserrat', sans-serif;
-    font-size: 20px;
+    font-size: 1rem;
     font-weight: 600;
-
+    text-decoration: none;
 }
 
 .cabecalho__menu__link:hover{
     color:white;
-}
-
-.titulo-destaque{
-    color: #22D4FD;
 }
 
 .apresentacao{
@@ -46,9 +43,10 @@ body{
     display: flex;
     align-items: center;
     justify-content: space-between;
+    gap: 82px;
 }
 .apresentacao__conteudo{
-    width: 615px;
+    width: 50%;
     display: flex;
     flex-direction: column;
     gap: 40px;
@@ -56,17 +54,21 @@ body{
 
 .apresentacao__conteudo__titulo{
     margin-top: -50px;
-    margin-left: -100px;
-    font-size: 25px;
+   /* margin-left: -100px; */
+    font-size: 1.5rem;
     font-family: 'Krona One', sans-serif;
 }
 
+/* .titulo-destaque{
+    color: #22D4FD;
+} */
+
 .apresentacao__conteudo__texto{
-    text-align: justify;
-    margin-left: -100px;
-    font-size: 15px;
-    font-family: 'Montserrat', sans-serif;
+    /* text-align: justify;
+    margin-left: -100px;*/
     margin-top: -30px;
+    font-size: 1rem;
+    font-family: 'Montserrat', sans-serif;
 }
 
 .apresentacao__links{
@@ -82,18 +84,18 @@ body{
     margin-top: 30px;
     font-family: 'Krona One', sans-serif;
     font-weight: 400;
-    font-size: 15px;
+    font-size: 1.1rem;
 }
 
-.apresentacao__links__link{
+.apresentacao__links__navegacao{
     display: flex;
     justify-content: center;
     gap: 16px;
     border: 2px solid  #22D4FD;
-    width: 381px;
+    width: 50%;
     text-align: center;
     border-radius: 8px;
-    font-size: 24px;
+    font-size: 1.5rem;
     font-weight: 600;
     padding: 21.5px 0;
     text-decoration: none;
@@ -101,11 +103,12 @@ body{
     font-family: 'Montserrat', sans-serif;
 }
 
-.apresentacao__links__link:hover{
+.apresentacao__links__navegacao:hover{
     background-color: #272727;
 }
 
 .hallanrsantos{
+    width: 50%;
     margin-top: -50px;
     margin-right: -50px;
     border-radius: 500px;
@@ -115,17 +118,20 @@ body{
     text-align: center;
 }
 
+/* inicioProjetos */
 .container {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    margin-left: -130px;
+    margin-left: -135px;
     font-family: 'Montserrat', sans-serif;
-    font-size: 12px;
+    font-size: 1rem;
 }
 
 .projeto {
-    padding-left: 50px;
+    width: 300px;
+    padding-left: 5px;
+    margin-left: 50px;
     padding-top: 30px;
     padding-bottom: 250px;
     text-align: center;
@@ -137,22 +143,52 @@ body{
 
 h2{
     font-family: 'Krona One', sans-serif;
-    font-size: 15px;
+    font-size: 1rem;
+
 }
+
 .tamanhoTextoDescricao{
     padding-left: 50px;
     text-align: justify;
-    
+    font-size: 1rem;
+
 }
+
 
 /* fimProjetos */
 
 .rodape{
+    /* width: 100%;
+    position: absolute; */
     color:#000000;
     background-color:  #22D4FD;
     padding: 12px;
     text-align: center;
     font-family: 'Montserrat', sans-serif;
-    font-size: 10px;
+    font-size: 1rem;
     font-weight: 400;
+}
+
+/* Resposividade */
+@media (max-width: 1000px) {
+    .cabecalho{
+        padding: 8% 0% 0% 25%;
+    }
+
+    .apresentacao {
+        flex-direction: column-reverse;
+    }
+    .cabecalho__menu{
+        justify-content: center;
+    }
+
+    .apresentacao__conteudo{
+        margin-top:30px;
+        width:auto;
+    }
+
+    .hallanrsantos{
+        margin-top: 20px;
+        margin-left: -90px;
+    }
 }
