--- a/estilos/style.css
+++ b/estilos/style.css
@@ -1,33 +1,34 @@
 @import url('https://fonts.googleapis.com/css2?family=Krona+One&family=Montserrat:wght@400;600&display=swap');
 
-
 *{
     margin: 0;
     padding: 0;
 }
 
+
+
 body{
     box-sizing: border-box;
-    background-color: black;
-    color: #F6F6F6;
+    background-color: #2a2323;
+    color: #f6f6f6;
 }
 
-
-/* .cabecalho{
-    padding: 2% 0% 0% 34%;
-
-} */
+.cabecalho{
+    /* padding: 2% 0% 0% 34%; */
+    position: relative;
+}
 
 .cabecalho__menu{
-    margin-top: 20px;
+    background-color: #68D2E8;
+    margin-top: -10px;
+    padding: 1%;
     display: flex;
     justify-content: center;
     gap: 80px;
 }
 
 .cabecalho__menu__link{
-    /* margin-left: 200px; */
-    color:#22D4FD;
+    color:#111516;
     font-family: 'Montserrat', sans-serif;
     font-size: 1rem;
     font-weight: 600;
@@ -35,8 +36,33 @@ body{
 }
 
 .cabecalho__menu__link:hover{
-    color:white;
+    color:rgb(108, 134, 49);
 }
+
+/* menu mobile invisivel */
+.lista__menu{
+    display: none;
+}
+
+.invisivel{
+    display: none;
+}
+
+.butao__menu{
+    width: 32px;
+    background-color:transparent;
+    border: none;
+    display: none;
+    cursor: pointer;
+    position: absolute;
+    right: 8px;
+    top: 8px;
+}
+.imagem__menu{
+    width: 32px;
+
+}
+/* fim do menu mobile invisivel */
 
 .apresentacao{
     padding: 6% 15%;
@@ -45,6 +71,7 @@ body{
     justify-content: space-between;
     gap: 82px;
 }
+
 .apresentacao__conteudo{
     width: 50%;
     display: flex;
@@ -54,18 +81,11 @@ body{
 
 .apresentacao__conteudo__titulo{
     margin-top: -50px;
-   /* margin-left: -100px; */
     font-size: 1.5rem;
     font-family: 'Krona One', sans-serif;
 }
 
-/* .titulo-destaque{
-    color: #22D4FD;
-} */
-
 .apresentacao__conteudo__texto{
-    /* text-align: justify;
-    margin-left: -100px;*/
     margin-top: -30px;
     font-size: 1rem;
     font-family: 'Montserrat', sans-serif;
@@ -99,26 +119,26 @@ body{
     font-weight: 600;
     padding: 21.5px 0;
     text-decoration: none;
-    color: #F6F6F6;
+    color: #f6f6f6;
     font-family: 'Montserrat', sans-serif;
 }
 
 .apresentacao__links__navegacao:hover{
-    background-color: #272727;
+    background-color: #000000;
 }
 
 .hallanrsantos{
     width: 50%;
     margin-top: -50px;
     margin-right: -50px;
-    border-radius: 300px;
+    border-radius: 500px;
 }
 
+/* inicio projetos */
 .projetos {
     text-align: center;
 }
 
-/* inicioProjetos */
 .container {
     display: flex;
     flex-wrap: wrap;
@@ -130,6 +150,7 @@ body{
 
 .projeto {
     width: 300px;
+    height:200px;
     padding-left: 5px;
     margin-left: 50px;
     padding-top: 30px;
@@ -144,22 +165,17 @@ body{
 h2{
     font-family: 'Krona One', sans-serif;
     font-size: 1rem;
-
 }
 
 .tamanhoTextoDescricao{
     padding-left: 50px;
     text-align: justify;
     font-size: 1rem;
-
 }
-
 
 /* fimProjetos */
 
 .rodape{
-    /* width: 100%;
-    position: absolute; */
     color:#000000;
     background-color:  #22D4FD;
     padding: 12px;
@@ -170,23 +186,54 @@ h2{
 }
 
 /* Resposividade */
-@media (max-width: 1000px) {
+@media  (max-width: 1000px) {                         
     .cabecalho{
         padding: 8% 0% 0% 25%;
     }
 
-    .apresentacao {
-        flex-direction: column-reverse;
-    }
     .cabecalho__menu{
+        display: none;
         justify-content: center;
-        margin-left: -190px;
+        margin-left: -205px;
     }
 
     .cabecalho__menu__link{
-        
-         margin-right: 10px;
+        font-size: 14px;
+        margin-right: -50px;
     }
+
+    
+    .apresentacao {
+        flex-direction: column-reverse;
+    }
+
+    /* menu mobile*/
+    .lista__menu{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        gap: 16px;
+        margin: -25px;
+        margin-right: 1px;
+    }
+
+    .link__mobile{
+        color:#22caf4;
+        font-family: 'Montserrat', sans-serif;
+        font-size: 1rem;
+        font-weight: 600;
+        text-decoration: none;
+    }
+
+    .link__mobile:hover{
+        color: azure;
+    }
+
+    .butao__menu{
+        display: flex;
+    }
+
+/* fim do menu mobile*/
 
     .apresentacao__conteudo{
         margin-top:30px;
